# bootcamp_final_project

./: .gitignore  docker-compose.yml
docs/http_requests/: test_books_api.http  users_requests.http
library_project/: .gitignore  README.md
library_project/book_microservice/docs/: db_scheme.puml
library_project/components/book_microservice/: pyproject.toml
library_project/components/nginx/: nginx.conf
library_project/deployment/: docker-compose.yml
library_project/deployment/books_backend/: Dockerfile
library_project/deployment/users_backend/: Dockerfile
library_project/docs/: components.puml
library_project/user_microservice/docs/: db_scheme.puml  precedents.puml
microservices/book_microservice/: entrypoint_cli.sh  entrypoint_consumer.sh  setup.cfg
microservices/book_microservice/books_backend/adapters/: cli.py
microservices/book_microservice/books_backend/adapters/api/: app.py  auth.py  controllers.py
microservices/book_microservice/books_backend/adapters/database/: mapping.py  repositories.py  tables.py
microservices/book_microservice/books_backend/adapters/message_bus/: consumer.py  scheme.py
microservices/book_microservice/books_backend/application/: dto.py  entities.py  errors.py  interfaces.py  services.py
microservices/book_microservice/books_backend/composites/: api.py  cli.py  consumer.py
microservices/user_microservice/: Dockerfile  entrypoint_api.sh
microservices/user_microservice/user_backend/: __init__.py
microservices/user_microservice/users_backend/: __init__.py
(+85 files in other folders)
