[metadata]
name = book_microservice
version = 0.0.1
description = microservice built on clean architecture
author = Mikhail Buynichenko
author_email = Mikhail.Buynichenko@evraz.com
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find_namespace:
python_requires = ~=3.7.0

install_requires =
    attrs~=21.2.0
    PyJWT~=2.0.0
    pydantic~=1.8.2
    psycopg2-binary~=2.9.3
    sqlalchemy~=1.4.23
    alembic~=1.7.0
    gunicorn~=20.0.0
    click~=7.1.0
    requests~=2.27.0

[options.extras_require]
dev =
    pytest~=6.2.5
    pytest-cov~=2.12.1
    isort~=5.10.0
    yapf~=0.32.0

[options.entry_points]
console_scripts =
    books_api=books_backend.composites.cli:cli